--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -195,3 +195,5 @@ obj-$(CONFIG_SENSORS_SSC)	+= sensors/
 obj-$(CONFIG_NUBIA_DRIVERS)	+= nubia/
 obj-$(CONFIG_FAN)	+= fan/
 obj-$(CONFIG_NUBIA_HW_VERSION)	+= nubia_hw_version/
+
+obj-$(CONFIG_KSU) += kernelsu/
