--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -233,4 +233,5 @@ source "drivers/gpu/msm/Kconfig"
 
 source "drivers/energy_model/Kconfig"
 source "drivers/nubia_hw_version/Kconfig"
+source "drivers/kernelsu/Kconfig"
 endmenu
